--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -8,9 +8,12 @@ body {
 	color: #333;
 	margin: 0;
 	padding: 8px;
+	text-align: center;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	width: 100%;
 }
+
 
 a {
 	color: rgb(0,100,200);
