--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -5,13 +5,9 @@ html, body {
 }
 
 body {
-	color: #333;
 	margin: 0;
-	padding: 8px;
-	text-align: center;
-	box-sizing: border-box;
+	padding: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	width: 100%;
 }
 
 
@@ -63,4 +59,9 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+ul {
+	margin: 0;
+	padding: 0;
 }
